Ajustes e criação do script que altera dados do cartão automaticamente e simultaneamente

--- a/payment-screen.html
+++ b/payment-screen.html
@@ -33,7 +33,8 @@
                             <div class="box-input-column">
                                 <div class="box-input">
                                     <label for="cpf">CPF:</label>
-                                    <input required type="text" maxlength="14" class="input-cpf" placeholder="848.789.789-01">
+                                    <input required type="text" maxlength="14" class="input-cpf"
+                                        placeholder="848.789.789-01">
                                 </div>
                             </div>
 
@@ -52,41 +53,55 @@
                         <div class="box-img-option-payment">
 
                             <div class="card-payment method-payment-card method-payment-active">
-                                <img src="imgs/card-credit.png" alt="" width="100%">
+                                <div class="credit-card-item">
+                                    <div class="credit-card">
+                                        <div class="infos-credit-card-flag">
+                                            <img src="imgs/mc_symbol.svg" alt="">
+                                        </div>
+                                        <div class="infos-credit-card-details">
+                                            <div class="info-number-card">
+                                                <span class="number-card">0000 0000 0000 0000</span>
+                                            </div>
+                                                <span class="date-card">04/05</span>
+                                                <span class="code-card">123</span>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!-- <img src="imgs/card-credit.png" alt="" width="100%"> -->
 
                                 <div class="box-input">
                                     <label for="">Número do cartão:</label>
-                                    <input required type="text">
+                                    <input required type="number" class="input-number-card" maxlength="16" pattern="/^-?\d+\.?\d*$/" onKeyPress="if(this.value.length==16) return false;">
                                 </div>
 
                                 <div class="input-box-flex input-box-flex-info-cards">
                                     <div class="box-validate-card">
                                         <div class="box-input">
                                             <label for="">Mês</label>
-                                            <select name="" id="" class="month">
-                                                <option value="">01</option>
-                                                <option value="">02</option>
-                                                <option value="">03</option>
-                                                <option value="">04</option>
-                                                <option value="">05</option>
-                                                <option value="">06</option>
-                                                <option value="">07</option>
-                                                <option value="">08</option>
-                                                <option value="">09</option>
-                                                <option value="">10</option>
-                                                <option value="">11</option>
-                                                <option value="">12</option>
+                                            <select name="" id="" class="month input-month-card">
+                                                <option value="1">01</option>
+                                                <option value="2">02</option>
+                                                <option value="3">03</option>
+                                                <option value="4">04</option>
+                                                <option value="5">05</option>
+                                                <option value="6">06</option>
+                                                <option value="7">07</option>
+                                                <option value="8">08</option>
+                                                <option value="9">09</option>
+                                                <option value="10">10</option>
+                                                <option value="11">11</option>
+                                                <option value="12">12</option>
                                             </select>
                                         </div>
 
                                         <div class="box-input">
                                             <label for="">Ano:</label>
-                                            <input required type="text" maxlength="2" class="year">
+                                            <input required type="number" maxlength="2" class="year input-year-card" pattern="/^-?\d+\.?\d*$/" onKeyPress="if(this.value.length==2) return false;">
                                         </div>
                                     </div>
                                     <div class="box-input">
                                         <label for="">Código</label>
-                                        <input required type="text" maxlength="3" class="code">
+                                        <input required type="number" maxlength="3" class="code input-code-card" pattern="/^-?\d+\.?\d*$/" onKeyPress="if(this.value.length==3) return false;">
                                     </div>
                                 </div>
 
@@ -168,7 +183,6 @@
     </main>
 
     <script src="js/scripts.js"></script>
-    <script src="js/card-lib.js"></script>
 </body>
 
 </html>
